projects/react/src/UI/Header/Header.scss
@import '~@maggioli-design-system/styles/scss/import-framework';

.header {
  background-color: color('adjust.tone');
  left: 0;
  padding: s(1);
  position: sticky;
  right: 0;
  top: 0;

  &__item {
    &:not( :last-child ) {
      display: none;
    }

    @include media('desktop') {
      &:not( :last-child ) {
        display: inline-flex;
      }

      &:last-child {
        display: none;
      }
    }

    &--action {
      cursor: pointer;
    }
  }

  &__logo {
    height: s(2);
    max-width: 100%;
    width: auto;

    .image__element {
      height: inherit;
      max-width: 100%;
      width: inherit;
    }
  }
}

